add buchseiten, titel ueberarbeitung

--- a/DigSig1.tex
+++ b/DigSig1.tex
@@ -10,6 +10,7 @@
 \usepackage{rotating}
 \newcommand{\formelbuch}[1]{$_{\textcolor{red}{\mbox{\small{S#1}}}}$}
 \newcommand{\arraystretchOriginal}{1}
+\newcommand{\buchSeite}[1]{$_{\textcolor{red}{\mbox{\small{ S#1}}}}$}
 
 \setDefaultArrayStretch{2}
 
