--- a/sections/Quantization.tex
+++ b/sections/Quantization.tex
@@ -1,6 +1,6 @@
 \section{Quantization\buch{Chapter 2}}
 
-\subsection{Quantization process}
+\subsection{Quantization process\buchSeite{62}}
 \begin{tabularx}{0.75\textwidth}{|l|X|X|}
 	\hline
 	$R$			& full-scale range		& $R = Q \cdot 2^B$
@@ -22,7 +22,7 @@
 \end{tabularx}
 
 
-\subsection{Oversampling and noise shaping}
+\subsection{Oversampling and noise shaping\buchSeite{66-70}}
 \begin{tabularx}{0.75\textwidth}{|l|l|X|}
 	\hline
 	$L$	& oversampling ratio	& $L = \frac{f_s'}{f_s}$ with $f_s'$ as higher sampling rate
@@ -52,7 +52,7 @@ Performance of oversampling noise shaping quantizers:
 \resetArrayStretch
 
 
-\subsection{D/A converters}
+\subsection{D/A converters\buchSeite{71-73}}
 \begin{tabularx}{\textwidth}{|l|X|l|l|}
 	\hline
 	\textbf{Name} & \textbf{Output calculation} & \textbf{Min} & \textbf{Max}
@@ -75,7 +75,7 @@ Performance of oversampling noise shaping quantizers:
 \end{tabularx}
 
 
-\subsection{A/D converters}
+\subsection{A/D converters\buchSeite{79}}
 \subsection{Analog and digital dither}
 Dither is a small white noise signal that is added to the input signal befor quantization. The variance of the noise is $\sigma_v^2$ and the variance of the quantization is $\sigma_e^2$. The total variance is :
 
