--- a/sections/RandomSignals.tex
+++ b/sections/RandomSignals.tex
@@ -1,4 +1,4 @@
-\section{Random Signals\buch{Chapter 13}}
+\section{Random Signals\buch{Chapter 13}\buchSeite{713-719}}
 \begin{tabularx}{\linewidth}{|l|X|}
 	\hline
 	probability distribution & $F_x(\alpha) = Pr\{x \leq \alpha \}$ \\
