--- a/sections/ZTransform.tex
+++ b/sections/ZTransform.tex
@@ -1,6 +1,6 @@
 \section{z-Transformation\buch{Chapter 5}}
 
-\subsection{Basic Properties}
+\subsection{Basic Properties\buchSeite{183}}
 
 \[
 	X(z) = \sum\limits_{n=-\infty}^\infty x(n)z^{-n}
@@ -21,7 +21,7 @@
 \end{tabularx}
 
 
-\subsection{Region of Convergence}
+\subsection{Region of Convergence (ROC)\buchSeite{186}}
 
 \[
 	\{ z \in \mathbb{C} \quad | \quad X(z) = \sum\limits_{n=-\infty}^{\infty} x(n)z^{-n} \neq \pm \infty \}
@@ -37,7 +37,7 @@
 \end{tabularx}
 
 
-\subsection{Causality and Stability}
+\subsection{Causality and Stability\buchSeite{193}}
 
 For a signal or system to be simultaneously stable and causal, it is necessary that all its poles lie strictly inside the unit circle in the z-plane. 
 \[ 1 > \max\limits_{i}|p_i| \]
@@ -47,7 +47,7 @@ can also be simultaneously stable and anticausal, but in this case all its poles
 strictly outside the unit circle.
 \[ 1 < \min\limits_{i}|p_i| \]
 
-\subsection{Frequency Spectrum}
+\subsection{Frequency Spectrum\buchSeite{196-210}}
 \begin{align*}
 	X(\omega)&= \sum\limits_{n=-\infty}^{\infty} x(n)e^{-j\omega n} \quad \text{(DTFT)} \
 	\qquad \omega = \frac{2 \pi f}{f_s} \qquad -\pi \leq \omega \leq \pi
