subsubsection erweiterung ToDo

--- a/sections/FIRFilteringConvolution.tex
+++ b/sections/FIRFilteringConvolution.tex
@@ -251,3 +251,7 @@ Therefore, the direct form takes the following different forms:
 \]
 
 See also \ref{geometricseries} \nameref{geometricseries}
+\subsection{Sample Processing Methods\buchSeite{146}}
+% ToDo this subsection
+\subsubsection{Pure Delays\buchSeite{147-151}}
+\subsubsection{FIR Filtering in Direct Form\buchSeite{152-156}}
