--- a/sections/TransferFunctions.tex
+++ b/sections/TransferFunctions.tex
@@ -1,9 +1,9 @@
 \section{Transfer Functions\buch{Chapter 6}}
 \subsection{IIR-Form:\buchSeite{223,224}}
-\[ 
-	H(z) = \frac{N(z)}{D(z)}
-		= \frac{b_0 + b_1 z^{-1} + b_2 z^{-2} + \ldots + b_N z^{-N}}{1 + a_1 z^{-1} + a_2 z^{-2} + \ldots + a_M z^{-M} }
-\]
+\begin{align}
+H(z) = \frac{N(z)}{D(z)}
+		= \frac{b_0 + b_1 z^{-1} + b_2 z^{-2} + \ldots + b_N z^{-N}}{1 + a_1 z^{-1} + a_2 z^{-2} + \ldots + a_M z^{-M} } && a_0 = 1 \text{ normalize to } 1 \notag
+\end{align}
 
 if $D(z) = 1$, the IIR Form can be reduced to a FIR Filter:
 \[
@@ -32,14 +32,13 @@ Example: $y(n) = 0.25 \cdot y(n-2) + x(n) $
 \end{tabularx}\\ \\
 
 \subsection{Transient Response\buchSeite{232}}
-\begin{tabularx}{1\textwidth}{l X}
-	complex sinuousness: & $x(n) = e^{j \omega_0 n} \Rightarrow X(Z) = \frac{1}{1-e^{j \omega_0 n} z^{-1}} $
-	\\ 
-	effective time: & $n_{eff} = \frac{\ln \epsilon}{\ln \rho}$ \qquad with \qquad \
-	$\rho = \max\limits_{i}\left|p_i \right|$
-	\\ 
-	$\left| 1-a e^{-j\omega}\right| = \sqrt{1-2a\cos(\omega) + a^2}$
-\end{tabularx}\\ \\
+\begin{align}
+&\text{complex sinuousness:} & & x(n) = e^{j \omega_0 n} \cdot u(n) && \Rightarrow && X(Z) = \frac{1}{1-e^{j \omega_0} z^{-1}} && ROC |z| > |e^{j\omega_0}|=1\notag\\ 
+&\text{effective time:} && n_{eff} = \frac{\ln \epsilon}{\ln \rho} &&\text{with: }& &\rho = \max\limits_{i}\left|p_i \right| &&\notag\\
+&\text{f and magnitude reponses:} && H(\omega)=\frac{b}{1-ae^{-j\omega}} &&\Rightarrow &&
+\left| H(\omega)\right| = \frac{b}{\sqrt{1-2a\cos(\omega) + a^2}} &&\notag\\
+&\text{requirement that:} && |H(\omega_0)|=1 &&&& &&\notag
+\end{align}\\
 
 \subsection{Unit Step Response\buchSeite{239}}
 \begin{tabularx}{1\textwidth}{l X}
@@ -49,9 +48,10 @@ Example: $y(n) = 0.25 \cdot y(n-2) + x(n) $
 \end{tabularx}\\ \\
 
 
-\subsection{Pole/Zero Design\buchSeite{242}}
-\begin{tabularx}{1\textwidth}{l X}
-	3dB width & $\Delta\omega \simeq 2(1-R)$ \qquad $=:R$ is the pole
+\subsection{Pole/Zero Design\buchSeite{242,245}}
+\begin{tabularx}{1\textwidth}{Xll}
+	3dB width & $\Delta\omega \simeq 2(1-R)$ & $=:R$ is the pole \\
+	full width at half maximum of the magnitude squared response & $|H(\omega)|^2=\frac{1}{2}|H(\omega_0)|^2=\frac{1}{2}$&
 \end{tabularx}\\ \\
 
 \subsubsection{2 pole conjugate filter\buchSeite{244-246}}
@@ -62,9 +62,9 @@ Example: $y(n) = 0.25 \cdot y(n-2) + x(n) $
 	Transfer function: & $H(z)= \frac{G}{(1-R e^{-j\omega}z^{-1})(1-Re^{j\omega}z^{-1})}$\
 	$=\frac{G}{1+a_1z^{-1}+a_2z^{-2}}$
 	\\
-	& $h(n) = \frac{G}{\sin(\omega_0)}R^n \sin(\omega_0 n + \omega_0)$
-	\\ 
 	Parameter: & $a_1 = -2R\cos(\omega_0)$ \qquad; \qquad $a_2 = R^2$
+	\\ 
+	filter impulse Response & $h(n) = \frac{G}{\sin(\omega_0)}R^n \sin(\omega_0 n + \omega_0)$
 	\\ 
 	& $G = (1-R)\sqrt{1-2R\cos(2\omega_0)+ R^2}$
 \end{tabularx}\\ \\
@@ -95,8 +95,8 @@ circle.
 	\\
 	& $D(z) = N(\rho^{-1})  = \prod\limits_{i=1}^{M}(1- e^{j\omega_i}\rho z^{-1)} $
 	\\
-	& $H(z) = \frac{1+b_1 z^{-1} + b_2z^{-2} + \ldots + b_M z^{-M}}
-	{1+\rho b_1 z^{-1} + \rho^2 b_2z^{-2} + \ldots + \rho^M b_M z^{-M}} $
-	
-\end{tabularx}\\ \\
+	& $H(z) = \frac{N(z)}{(N\rho^{-1}z)}= \frac{1+b_1 z^{-1} + b_2z^{-2} + \ldots + b_M z^{-M}}
+	{1+\rho b_1 z^{-1} + \rho^2 b_2z^{-2} + \ldots + \rho^M b_M z^{-M}} $\\
+	&$a_i=\rho^ib_i \qquad$ mit $\qquad i=1,2,\ldots,M$ \\
+	\end{tabularx}\\ \\
 
