--- a/sections/FIRFilteringConvolution.tex
+++ b/sections/FIRFilteringConvolution.tex
@@ -1,6 +1,12 @@
 \section{FIR Filtering and Convolution\buch{Chapter 4}}
 \subsection{Block Processing Methods}
 \subsubsection{Convolution\buchSeite{121}}
+
+\begin{align}
+& \text{record of duration} && T_L=LT && \text{Signal Samples} && L=T_Lf_s \notag \\
+& x(n) && n=0,1,\ldots,L-1 && \text{sampling Time} && T \notag
+\end{align}
+
 \begin{tabular}{|l|l|l|}
 	\hline
 	$y(n)$		& direct and LTI forms of convolution	& $y(n)=\sum\limits_m h(m)x(n-m)=\sum\limits_m x(m)h(n-m)$
@@ -15,6 +21,8 @@
 	$h$		& $h=[h_0,h_1, \ldots , h_M]$
 	\\ \hline
 	$L_h$	& $L_h = M + 1$
+	\\ \hline
+	$L_x$	& $L_x = L$
 	\\ \hline
 	$L_y$	& $L_y = L + M = L_x + L_h - 1$
 	\\ \hline
@@ -69,9 +77,9 @@ $y=[y_0, y_1, y_2, y_3, y_4, y_5, y_6, y_7]$
 	\hline
 	$y_n$ & $y_0$ & $y_1$ & $y_2$ & $y_3$ & $y_4$ & $y_5$ & $y_6$ & $y_7$ \\
 \end{tabular}
-\[
-	y(n) = \sum\limits_{m=max(0,n-M)}^{min(n,L-1)} x(m)h(n-m)
-\]
+\begin{align}
+& y(n) = \sum\limits_{m=max(0,n-M)}^{min(n,L-1)} x(m)h(n-m) && \text{LTI-form}\notag
+\end{align}
 
 
 \subsubsection{Matrix Form\buchSeite{129}}
@@ -186,16 +194,24 @@ Example:
   moved to the right with an offset of $L$ compared to $y_n$.
 \end{enumerate}
 
-\begin{tabular}{c|ccccccccccc}
-	n & 0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \\
+example:
+\begin{align}
+& y_0=h\ast x_0 && y_1=h\ast x_1 && y_2=h\ast x_2 && x={\underbrace{n_0,n_1,n_2},\underbrace{n_3,n_4,n_5},\underbrace{n_6,n_7,n_8}}\notag \\
+& && && && \qquad\quad \ x_0 \qquad\quad \ x_1 \qquad\quad \ x_2 \notag
+\end{align}\\
+
+\begin{tabular}{c|cccccccccccc}
+	n & 0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11\\
 	\hline
 	$y_0$ & $y_{0,0}$ & $y_{0,1}$ & $y_{0,2}$ & $y_{0,3}$ & $y_{0,4}$ & $y_{0,5}$ &
-	& & & &\\
+	& & & & &\\
 	$y_1$ & & & & $y_{1,0}$ & $y_{1,1}$ & $y_{1,2}$ & $y_{1,3}$ & $y_{1,4}$ &
-	$y_{1,5}$ & & \\
-	$y_2$ & & & & & & & $y_{2,0}$ & $y_{2,1}$ & $y_{2,2}$ & $y_{2,3}$ & $y_{2,4}$
+	$y_{1,5}$ & & & \\
+	$y_2$ & & & & & & & $y_{2,0}$ & $y_{2,1}$ & $y_{2,2}$ & $y_{2,3}$ & $y_{2,4}$ & $y_{2,5}$
 	\\
 	\hline
+	$y$ & $\Sigma n_{0}$ & $\Sigma n_{1}$&$\Sigma n_{2}$ & $\Sigma n_{3}$&$\Sigma n_{4}$ &$\Sigma n_{5}$ &$\Sigma n_{6}$  &$\Sigma n_{7}$  & $\Sigma n_{8}$ & $\Sigma n_{9}$ & $\Sigma n_{10}$ & $\Sigma n_{11}$
+	\\
 \end{tabular}
 
 
