--- a/sections/ZTransform.tex
+++ b/sections/ZTransform.tex
@@ -49,7 +49,7 @@ strictly outside the unit circle.
 
 \subsection{Frequency Spectrum\buchSeite{196-210}}
 \begin{align}
-z=e^{-j\omega} && \omega = \frac{2 \pi f}{f_s} \notag\\
+z=e^{j\omega} && \omega = \frac{2 \pi f}{f_s} \notag\\
 X(\omega)= \sum\limits_{n=-\infty}^{\infty} x(n)e^{-j\omega n} &&  \text{(DTFT)} \notag \\
 H(\omega)= \sum\limits_{n=-\infty}^{\infty} h(n)e^{-j\omega n} &&  \text{(frequency response)} \notag \\
  -\pi \leq \omega \leq \pi && \text{nyquist interval}\notag\\
