--- a/sections/ZTransform.tex
+++ b/sections/ZTransform.tex
@@ -77,6 +77,12 @@ Some Z-Transforms: \\ \\
 	\hline
 	$-a^n u(-n-1)$ & $\frac{1}{1 - az^{-1}}$ & $|z|<a$ \\
 	\hline
+	$e^{\alpha n}$ & $\frac{z}{z-e^{\alpha}}$ & \\
+	\hline
+	$\cos(\omega n)$ & $\frac{z-(z-\cos(\omega))}{z^2 -2z\cos(\omega) + 1}$ & \\
+	\hline
+	$\sin(\omega n)$ & $\frac{z\sin(\omega)}{z^2 -2z\cos(\omega) + 1}$ & \\
+	\hline
 \end{tabularx}\\ \\
 \subsection{Inverse z-Transforms\buchSeite{202-204}}
 %ToDo this subsection
