--- a/sections/ZTransform.tex
+++ b/sections/ZTransform.tex
@@ -79,7 +79,7 @@ Some Z-Transforms: \\ \\
 	\hline
 	$e^{\alpha n}$ & $\frac{z}{z-e^{\alpha}}$ & \\
 	\hline
-	$\cos(\omega n)$ & $\frac{z-(z-\cos(\omega))}{z^2 -2z\cos(\omega) + 1}$ & \\
+	$\cos(\omega n)$ & $\frac{z(z-\cos(\omega))}{z^2 -2z\cos(\omega) + 1}$ & \\
 	\hline
 	$\sin(\omega n)$ & $\frac{z\sin(\omega)}{z^2 -2z\cos(\omega) + 1}$ & \\
 	\hline
