--- a/sections/ZTransform.tex
+++ b/sections/ZTransform.tex
@@ -70,6 +70,8 @@ Some DTFT-Transforms: \\ \\
 	$u[n]$ & $X_{2\pi}(\omega) = \frac{1}{1-e^{-i \omega}} + \pi \sum_{k=-\infty}^{\infty} \delta (\omega - 2\pi k) $ \\ & 	
 	$X(\omega) = \frac{1}{1-e^{-i \omega}} + \pi \cdot \delta (\omega) $ \\
 	\hline
+	$e^{-i a n}$ &	$X(\omega) = 2\pi\cdot \delta (\omega +a),     -\pi \leq a < \pi$ \\
+	\hline
 	$\cos(a n) $ & $X(\omega) = \pi [\delta (\omega +a)+\delta (\omega -a)],     -\pi < a < \pi $\\ &
 	$X_{2\pi}(\omega) = \pi \sum_{k=-\infty}^{\infty} \left[ \delta (\omega - a - 2\pi k) + \delta (\omega + a + 2\pi k) \right] $ \\
 	\hline
