Die von priedel geloeschte formel wiederhergestellt. Futzdummae Tubel

--- a/sections/TransferFunctions.tex
+++ b/sections/TransferFunctions.tex
@@ -39,6 +39,7 @@ Example: $y(n) = 0.25 \cdot y(n-2) + x(n) $
 \left| H(\omega)\right| = \frac{b}{\sqrt{1-2a\cos(\omega) + a^2}} &&\notag\\
 &\text{requirement that:} && |H(\omega_0)|=1 &&&& &&\notag
 \end{align}\\
+$\left| 1-a e^{-j\omega}\right| = \sqrt{1-2a\cos(\omega) + a^2}$\\
 
 \subsection{Unit Step Response\buchSeite{239}}
 \begin{tabularx}{1\textwidth}{l X}
