euler einte formel verallgemeinert

--- a/sections/ZTransform.tex
+++ b/sections/ZTransform.tex
@@ -111,7 +111,7 @@ Some Z-Transforms: \\ \\
 \begin{align}
 \cos(\alpha) = \frac{e^{j\alpha} + e^{-j\alpha}}{2}
 && \sin(\alpha) = \frac{e^{j\alpha} - e^{-j\alpha}}{2j} && 
-    {e}^{\pm jn\pi} = \cos{n\pi} \pm j \sin{n\pi} \notag\\
+    {e}^{\pm jn\omega} = \cos{n\omega} \pm j \sin{n\omega} \notag\\
 e^{j\frac{\pi}{2}n} = j^n & & e^{-j\frac{\pi}{2}n} = (-j)^n &&
 e^{jn\pi}=e^{-jn\pi}=(-1)^n \notag
 \end{align}
