--- a/sections/DiscretTimeSystems.tex
+++ b/sections/DiscretTimeSystems.tex
@@ -2,7 +2,7 @@
 \subsection{Linearity and time invariance\buchSeite{100-102}}
 \begin{tabular}{ll}
 \textbf{Linearity:} & If $y(n) = x(n)$ then $y(2n)=2x(n)$\\
-testing: & $y(n)=[x_1(n) + x_2(n)] = y_1(n) + y_2(n)$\\
+testing: & $x(n) = ax_1(n) + bx_2(n) \quad \underrightarrow{H} \quad y(n) = ay_1(n) + by_2(n)$\\
 \textbf{Time invariance:} & If $y(n) = x(n)$ then $y(n+\delta) = x(n+\delta)$\\
 testing: & $x_D(n)=x(n-D)$ and $y_D(n)=y(n-D)$\\
 \end{tabular}
@@ -14,7 +14,7 @@ testing: & $x_D(n)=x(n-D)$ and $y_D(n)=y(n-D)$\\
 \end{tabular}
 
 
-\subsection{FIR and IIR filters\buchSeite{105,106}}
+\subsection{Finit and Infinit Impulse Respone filters\buchSeite{105,106}}
 \begin{tabularx}{0.75\textwidth}{|l|X|X|}
 	\hline
 	$M$	& filter order				& 
@@ -29,13 +29,16 @@ testing: & $x_D(n)=x(n-D)$ and $y_D(n)=y(n-D)$\\
 	\\ \hline
 \end{tabularx}
 
-
+\begin{multicols}{2}
 \subsection{Causality\buchSeite{112}}
-\begin{tabular}{ll}
+\begin{tabular}{lp{4.5cm}}
 	\textbf{causal} & right sided signals, they are non-zero for $n>=0$ \\
 	\textbf{anticausal} & left sided signals, they are non-zero for $n<=-1$ \\
 	\textbf{mixed signals} & double-sided signals \\
 \end{tabular}
+\vfill
+
+\columnbreak
 
 \subsubsection{Anticausal to Causal\buchSeite{113}}
 Delay the system by $D$ to move the negative time from $n=-D$ to $0$
@@ -45,8 +48,11 @@ y(n) =& \sum\limits_{m}h(m)x(n-m) \\
 y_D(n) = & \sum\limits_{m}h_D(m)x(n-m) = \sum\limits_{m}h(m-D)x(n-m) \\ 
 \xrightarrow{m := k+D}& \sum\limits_{k}h(k)x(n-k-D) = y(n-D)
 \end{align*}
+\end{multicols}
+\includegraphics[width=15cm]{./picture/causality}
 
 \subsection{Stability\buchSeite{115}}
 \textbf{Stability Condition} $\sum\limits_{n=-\infty}^{\infty}\left| h(n)
 \right| < \infty$\\
-An LTI system is stable, if a bounded input can only generate bounded outputs.\\
+An LTI system is stable, if a bounded input can only generate bounded outputs.
+Always prefer stability over causality!
